--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,6 +4,7 @@ $font-main: 'Roboto Slab', serif;
 $font-second: 'Roboto', sans-serif;
 $color-light: #FFF;
 $color-gold: #FED136;
+$color-dark: #222;
 
 // Global
 
@@ -26,14 +27,20 @@ a {
 h1, h2, a {
     font-family: $font-second;
 }
-
-h1 {
+h1, h2 {
+    margin: 0;
     text-transform: uppercase;
     font-weight: 300;
 }
 
+h1 {
+    font-size: 75px;
+}
+
 h2 {
-    text-transform: capitalize;
+    font-size: 40px;
+}
+h3 {
     font-weight: 300;
 }
 
@@ -60,6 +67,9 @@ nav {
         text-transform: uppercase;
         padding: 0;
     }
+    li:hover, li:focus {
+        transform: scale(1.2);
+    } 
 }
 
 // Splash
@@ -84,14 +94,67 @@ nav {
         margin-top: 25px;
         font-size: 16px;
         text-transform: uppercase;
+
+        &:hover, &:focus {
+            transform: scale(1.1);
+        }
     }
-    h1 {
-        font-size: 75px;
+    h2 {
+        text-transform: capitalize;
     }
-    h2{
-        font-size: 40px;
+}
+
+// Services
+
+.services {
+    color: $color-dark;
+    padding: 80px 0;
+    i {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: $color-gold;
+        border: 2px solid $color-gold;
+        border-radius: 50%;
+        padding: 20px;
+        width: 60px;
+        height: 60px;
+        font-size: 30px;
+        position: relative;
+        margin: auto;
     }
-    h1, h2 {
-        margin: 0;
+    .decor {
+        border: none;
+        position: absolute;
+        padding: 0;
+    }
+    .fa-check {
+        font-size: 15px;
+        font-weight: bolder;
+        top:50%;
+        left:50%;
+        transform: translate(-50%,-50%);
+    }
+    .keyhole {
+        top:50%;
+        left:50%;
+        transform: translate(-60%,-15%);
+        border-radius: 5px;
+        height: 10px;
+        width: 5px;
+        background-color: #FFF;
+    }
+    .title-row {
+        margin-bottom: 60px;
+        p {
+            font-size: 16px;
+            font-weight: 300;
+        }
+    }
+    .col, .row {
+        text-align: center;
+    }
+    h3 {
+        margin-top: 35px;
     }
 }
