--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,7 +18,7 @@ body {
     line-height: 1.7;
     font-weight: 400;
     font-family: $font-main;
-    color: $color-light;
+    color: $color-dark;
 }
 a {
     text-decoration: none;
@@ -27,7 +27,7 @@ a {
 h1, h2, a {
     font-family: $font-second;
 }
-h1, h2 {
+h1, h2, h3 {
     margin: 0;
     text-transform: uppercase;
     font-weight: 300;
@@ -42,20 +42,41 @@ h2 {
 }
 h3 {
     font-weight: 300;
+    margin-top: 30px;
+}
+p {
+    font-weight: 300;
 }
 
 .container {
     max-width: 960px;
+}
+section {
+    padding: 90px 0;
+}
+.title-row {
+    margin-bottom: 60px;
+    p {
+        font-size: 16px;
+        font-weight: 300;
+    }
+}
+.col, .row {
+    text-align: center;
 }
 
 // Navbar
 
 nav {
     padding-top: 25px;
+
     .brand-logo {
         font-size: 26px;
         text-transform: capitalize;
         color: $color-gold;
+    }
+    .brand-col {
+        text-align: left;
     }
     .col {
         padding: 0;
@@ -80,6 +101,8 @@ nav {
     min-height: 650px;
     display: flex;
     flex-direction: column;
+    color: $color-light;
+
     .splash-text-wrapper {
         display: flex;
         flex-direction: column;
@@ -107,8 +130,6 @@ nav {
 // Services
 
 .services {
-    color: $color-dark;
-    padding: 80px 0;
     i {
         display: flex;
         justify-content: center;
@@ -144,17 +165,54 @@ nav {
         width: 5px;
         background-color: #FFF;
     }
-    .title-row {
-        margin-bottom: 60px;
-        p {
-            font-size: 16px;
-            font-weight: 300;
-        }
+}
+
+// Our Portfolio
+
+.portfolio {
+    .card {
+        height: 400px;
+        margin-bottom: 40px;
     }
-    .col, .row {
+    .image-wrapper {
+        height: 300px;
+    }
+    .caption {
         text-align: center;
     }
-    h3 {
-        margin-top: 35px;
+    .caption p {
+        font-weight: 300;
+    }
+    p {
+        margin: 0;
+    }
+    img:hover, a:focus {
+        transform: scale(1.05);
+        transition: all 0.4s;
+    }
+    h3, p {
+        text-transform: capitalize;
+    }
+}
+// Footer
+footer {
+    height: 100px;
+    position: relative;
+    display: flex;
+    align-items: center;
+
+    .circle-row {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        display: flex;
+    }
+    .circle {
+        width: 25px;
+        height: 25px;
+        background-color: $color-dark;
+        border-radius: 50%;
+        margin:5px;
     }
 }
